# azure-kinect-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: 1-azure-kinect-sys.yml  2-azure-kinect.yml
azure-kinect/: Cargo.toml
azure-kinect-sample-viewer/: .gitignore  Cargo.toml  README.md
azure-kinect-sample-viewer/src/: main.rs
azure-kinect-sys/: Cargo.toml  README.md  bindgen.sh  wrapper.h
azure-kinect-sys/src/: api.rs  bindgen_k4a.rs  bindgen_k4arecord.rs  display.rs  factory.rs  k4a.rs  k4arecord.rs  lib.rs  loader.rs
azure-kinect/examples/: open_device.rs
azure-kinect/src/: api.rs  bindings.rs  calibration.rs  camera.rs  capture.rs  color_resolution.rs  default.rs  depth_mode.rs  device.rs  display.rs  enums.rs  error.rs  factory.rs  format.rs  fps.rs  image.rs  imu.rs  k4a_functions.rs  lib.rs  playback.rs  playback_data_block.rs  playback_track.rs  record.rs  structs.rs  transformation.rs  utility.rs  vectors.rs
azure-kinect/tests/: record_test.rs  tests.rs
examples/: open_device.rs
k4arecorder/: Cargo.toml  README.md
k4arecorder/src/: main.rs  param.rs  recorder.rs
src/: calibration.rs  camera.rs  capture.rs  default.rs  device.rs  display.rs  error.rs  factory.rs  image.rs  import.rs  imu.rs  k4a_functions.rs  k4a_import.rs  k4atypes_import.rs  lib.rs  transformation.rs  utility.rs
tests/: tests.rs
