[package]
name = "azure-kinect"
version = "0.1.0"
authors = ["Yasuhiro Taniuchi"]
license = "MIT"
description = "Rust Bindings for Azure Kinect Sensor SDK"
homepage = "https://github.com/aosoft/azure-kinect-rs"
repository = "https://github.com/aosoft/azure-kinect-rs"
readme = "README.md"
keywords = ["kinect"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

