[package]
name = "azure-kinect-sample-viewer"
version = "0.2.0"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

azure-kinect = { path = "../azure-kinect" }
azure-kinect-sys = { path = "../azure-kinect-sys" }
sdl2 = "0.34.0"

[features]

default = ["depth-view"]
depth-view = []