[package]
name = "azure-kinect"
version = "0.2.0"
authors = ["Yasuhiro Taniuchi"]
license = "MIT"
description = "Rust Bindings for Azure Kinect Sensor SDK"
homepage = "https://github.com/aosoft/azure-kinect-rs"
repository = "https://github.com/aosoft/azure-kinect-rs"
readme = "../README.md"
categories = ["api-bindings", "hardware-support"]
keywords = ["kinect"]
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "../LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

azure-kinect-sys = { version = "0.2.0", path = "../azure-kinect-sys" }